--- a/LXQ/LXQ.vcxproj
+++ b/LXQ/LXQ.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>Sources;..\DirectXTK\Inc;..\Effects11\inc;$(IncludePath)</IncludePath>
+    <IncludePath>Sources;Sources\Core;E:\Library\boost_1_60_0;..\DirectXTK\Inc;..\Effects11\inc;..\ThirdParty\plog\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -80,14 +80,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Core\Logger.cpp" />
+    <ClCompile Include="Sources\Core\IEntity.cpp" />
+    <ClCompile Include="Sources\Core\IComponent.cpp" />
+    <ClCompile Include="Sources\Core\IObject.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Sources\Math\Math.cpp" />
+    <ClCompile Include="Sources\Core\Math\Math.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Sources\Math\Math.h" />
+    <ClInclude Include="Sources\Core\Logger.h" />
+    <ClInclude Include="Sources\Core\IEntity.h" />
+    <ClInclude Include="Sources\Core\IComponent.h" />
+    <ClInclude Include="Sources\Core\IObject.h" />
+    <ClInclude Include="Sources\LXQ.h" />
+    <ClInclude Include="Sources\Core\Math\Math.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Sources\Math\Math.inl" />
+    <None Include="Sources\Core\Math\Math.inl" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Sources\Resource\Shaders\Hello.fx">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">4.0</ShaderModel>
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">fxc /Fc /Od /Zi /T fx_5_0 /Fo "$(ProjectDir)_Resource/Effects/%(Filename).fxo" "%(FullPath)"</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)_Resource/Effects/%(Filename).fxo</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
