优化Object的创建

--- a/LXQ/LXQ.vcxproj
+++ b/LXQ/LXQ.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="Sources\Engine\Component\Transform.cpp" />
     <ClCompile Include="Sources\Platform\Window.cpp" />
     <ClCompile Include="Sources\Platform\Time.cpp" />
+    <ClCompile Include="Sources\Core\Uncopyable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Core\Singleton.h" />
@@ -118,6 +119,7 @@
     <ClInclude Include="Sources\Engine\Component\Transform.h" />
     <ClInclude Include="Sources\Platform\Window.h" />
     <ClInclude Include="Sources\Platform\Time.h" />
+    <ClInclude Include="Sources\Core\Uncopyable.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Sources\Core\Math\Math.inl" />
