--- a/LXQ/LXQ.vcxproj.filters
+++ b/LXQ/LXQ.vcxproj.filters
@@ -84,6 +84,7 @@
     </ClCompile>
     <ClCompile Include="Sources\Platform\Time.cpp" />
     <ClCompile Include="Sources\Core\Uncopyable.cpp" />
+    <ClCompile Include="Sources\Graphics\IDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Core\Logger.h">
@@ -133,6 +134,7 @@
     </ClInclude>
     <ClInclude Include="Sources\Platform\Time.h" />
     <ClInclude Include="Sources\Core\Uncopyable.h" />
+    <ClInclude Include="Sources\Graphics\IDevice.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Sources\Resource\Shaders\Hello.fx">
